CreatePokemon modal and function with alert when request success

--- a/frontend/src/component/CardPokemon/CardPokemon.css
+++ b/frontend/src/component/CardPokemon/CardPokemon.css
@@ -13,6 +13,8 @@
     object-fit: cover;
     height: 100px;
     width: 100px;
+    min-width: 100px;
+    min-height: 100px;
 }
 
 .detail-container{
